# shopping-cart

./: Cargo.toml  README.md  docker-compose.yml  test_data.jsonlines
scripts/: produce_test_messages.sh
src/: cart_processing.rs  config.rs  datamodel.rs  main.rs  utils.rs
