[package]
name = "shopping-cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
redis = "0.21.5"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"